feat(admin): create API endpoints
